fix: Overflow of messages removed

--- a/public/src/scss/chat.scss
+++ b/public/src/scss/chat.scss
@@ -173,7 +173,7 @@ body {
         background-color: #313131;
 
         @media only screen and (max-width: 950px) {
-          width: 100%;
+          width: 90%;
         }
 
         &-left {
